--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>Welcome to My Site</h1>
+    <h1>Welcome to </h1>
     <p>This is the homepage with a dark theme and sleek buttons.</p>
   </header>
 
   <main class="button-grid">
     <a href="page1.html" class="btn">Page One</a>
-    <a href="page2.html" class="btn">Page Two</a>
-    <a href="page3.html" class="btn">Page Three</a>
+
     <!-- Add more buttons/links as needed -->
   </main>
+  <section class="upcoming">
+  <h2>Upcoming Features</h2>
+  <ul>
+    <li>Interactive animations</li>
+    <li>Downloadable PDFs</li>
+    <li>Contact form integration</li>
+    <li>More dark-themed subpages</li>
+  </ul>
+</section>
 </body>
 </html>
