--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
   <main class="button-grid">
     <a href="page1.html" class="btn">Page One</a>
+       <a href="page2.html" class="btn">Page Two</a>
+    <a href="page3.html" class="btn">Page Three</a>
+     <a href="page2.html" class="btn">Page Two</a>
+    <a href="page3.html" class="btn">Page Three</a>
+
 
     <!-- Add more buttons/links as needed -->
-  </main>
-  <section class="upcoming">
-  <h2>Upcoming Features</h2>
-  <ul>
     <li>Interactive animations</li>
     <li>Downloadable PDFs</li>
     <li>Contact form integration</li>
