--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
   <a href="page2.html" class="btn">Page Two</a>
   <a href="page3.html" class="btn">Page Three</a>
 
-    <!-- Add more buttons/links as needed -->
+    </main>
+    <section class="upcoming">
+  <h2>Upcoming Features</h2>
+  <ul>
     <li>Interactive animations</li>
     <li>Downloadable PDFs</li>
     <li>Contact form integration</li>
     <li>More dark-themed subpages</li>
   </ul>
 </section>
+
+
 </body>
 </html>
