--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   </header>
 
   <main class="button-grid">
-   <a href="page1.html" class="btn">Page One</a>
-  <a href="page2.html" class="btn">Page Two</a>
+   <a href="ee325.html" class="btn">EE325-Probaility</a>
+  <!-- <a href="page2.html" class="btn">Page Two</a>
   <a href="page3.html" class="btn">Page Three</a>
   <a href="page2.html" class="btn">Page Two</a>
-  <a href="page3.html" class="btn">Page Three</a>
+  <a href="page3.html" class="btn">Page Three</a> -->
 
     </main>
     <section class="upcoming">
