--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>Welcome to </h1>
-    <p>This is the homepage with a dark theme and sleek buttons.</p>
+    <h1>Welcome to Sophomore Course Home</h1>
+    <p>Tired of frantically switching between Resobin,Course Drive,Asc and a hunedred other tabs one day before an exam?</p>
   </header>
 
   <main class="button-grid">
@@ -22,11 +22,21 @@
     <section class="upcoming">
   <h2>Upcoming Features</h2>
   <ul>
-    <li>Interactive animations</li>
-    <li>Downloadable PDFs</li>
-    <li>Contact form integration</li>
-    <li>More dark-themed subpages</li>
+    <li>Update to include btech info/material</li>
+    <li>More courses</li>
+    <li>Senior Feedback/advices section</li>
+    <li>Anything else you suggest</li>
+    
   </ul>
+</section>
+<section class="section-block">
+  <h2>Note</h2>
+  <p>
+    I concived this Idea during the summer break but didn't have the propper resources to work upon it back then.
+    While this website is related to my CR campaign , It is more of a mini personal project rather than a campaigning stunt. 
+  </p>
+
+   
 </section>
 
 
