--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <ul>
     <li>Update to include btech info/material</li>
     <li>More courses</li>
+    <li>Improved UI</li>
     <li>Senior Feedback/advices section</li>
     <li>Anything else you suggest</li>
     
@@ -32,8 +33,7 @@
 <section class="section-block">
   <h2>Note</h2>
   <p>
-    I concived this Idea during the summer break but didn't have the propper resources to work upon it back then.
-    While this website is related to my CR campaign , It is more of a mini personal project rather than a campaigning stunt. 
+  Aryan Metha :  It is more of a mini personal project rather than a campaigning stunt. 
   </p>
 
    
