--- a/ee325.html
+++ b/ee325.html
@@ -2,12 +2,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page One</title>
+  <title>EE 325</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <header class="site-header">
-    <h1>Page One</h1>
+    <h1>EE 325</h1>
   </header>
 
   <main class="content">
