--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
   <main class="button-grid">
    <a href="ee325.html" class="btn">EE325-Probaility</a>
-  <!-- <a href="page2.html" class="btn">Page Two</a>
-  <a href="page3.html" class="btn">Page Three</a>
-  <a href="page2.html" class="btn">Page Two</a>
-  <a href="page3.html" class="btn">Page Three</a> -->
+     <a href="Calendar.html" class="btn">Events and Deadlines</a>
 
     </main>
     <section class="upcoming">
