some more courses

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <section class="section-block">
   <h2>Note</h2>
   <p>
-  Aryan Metha :  It is more of a mini personal project rather than a campaigning stunt. 
+  This is only a prototype-a personal mini project.A lot of work needs to be done.I will continue working on this.Hopefully the furture CRs and other enthu folks will also chip in.
   </p>
 
    
