--- a/ee325.html
+++ b/ee325.html
@@ -16,7 +16,7 @@
   <div class="image-group">
     <figure>
       <img src="assets/images/ee325_manjunath.png" alt="Grading :previous offering by prof. Manjunath" />
-      <figcaption>Grading :previous offering by prof. Manjunath</figcaption>
+      <figcaption>Grading :previous offering by prof. Manjunath(genral trend is similar)</figcaption>
     </figure>
     <!-- <figure>
       <img src="assets/images/grades2.png" alt="Assignment Weights" />
@@ -54,7 +54,7 @@
   <div class="button-grid">
     <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20325&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac" class="btn">Course Drive</a>
     <a href="404.html" class="btn">Nimay Shah GitHub</a>
-    <a href="https://dl.icdst.org/pdfs/files3/6165796e54ff8ac8e3d8d93e1f1f2221.pdf" class="btn">Reference Book</a>
+    <a href="https://sharif.ir/~bahram/sp4cl/MainReferences/Papoulis-ProbabilityRandomVariablesAndStochasticProcesses.pdf" class="btn">Reference Book</a>
   </div>
 </section>
 
