--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <main class="button-grid">
    <a href="ee325.html" class="btn">EE325-Probaility</a>
+   <a href="ee224.html" class="btn">224-Digital</a>
+   <a href="ec101.html" class="btn">Ec101-Economics</a>
      <a href="Calendar.html" class="btn">Events and Deadlines</a>
 
     </main>
