minor error fix

--- a/ee224.html
+++ b/ee224.html
@@ -16,7 +16,7 @@
   <div class="image-group">
     <figure>
       <img src="assets/images/ee224_patkar.png" alt="Grading :previous offering by prof. Patkar" />
-      <figcaption>Grading :previous offering by prof. Manjunath(genral trend is similar)</figcaption>
+      <figcaption>Grading :previous offering by prof. Patkar(genral trend is similar)</figcaption>
     </figure>
     <!-- <figure>
       <img src="assets/images/grades2.png" alt="Assignment Weights" />
