theme toggle scrollToTop

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <header class="site-header">
     <h1>Welcome to Sophomore Course Home</h1>
     <p>Tired of frantically switching between Resobin,Course Drive,Asc and a hunedred other tabs one day before an exam?</p>
+    <div class="theme-toggle-container">
+      <label class="switch" aria-label="Toggle dark mode">
+        <input type="checkbox" id="theme-toggle" />
+        <span class="slider round"></span>
+      </label>
+    </div>
+
   </header>
 
   <main class="button-grid">
@@ -38,6 +45,7 @@
    
 </section>
 
-
+  <button id="scrollToTop" title="Back to top">↑</button>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
