--- a/Calendar.html
+++ b/Calendar.html
@@ -8,6 +8,12 @@
 <body>
   <header class="site-header">
     <h1>Upcoming Events and Deadlines</h1>
+    <div class="theme-toggle-container">
+      <label class="switch" aria-label="Toggle dark mode">
+        <input type="checkbox" id="theme-toggle" />
+        <span class="slider round"></span>
+      </label>
+    </div>
   </header>
 
   <main class="content">
@@ -21,5 +27,7 @@
   <footer>
     <a href="index.html" class="btn back-btn">Back to Home</a>
   </footer>
+  <button id="scrollToTop" title="Back to top">↑</button>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
