--- a/index.html
+++ b/index.html
@@ -2,41 +2,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My GitHub Pages Site</title>
+  <title>Resource Hub</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <header class="site-header">
-    <h1>Welcome to Sophomore Course Home</h1>
+    <h1>Welcome to the Sophomore Course Home</h1>
     <p>Tired of frantically switching between Resobin,Course Drive,Asc and a hunedred other tabs one day before an exam?</p>
   </header>
 
   <main class="button-grid">
-   <a href="ee325.html" class="btn">EE325-Probaility</a>
-   <a href="ee224.html" class="btn">224-Digital</a>
-   <a href="ec101.html" class="btn">Ec101-Economics</a>
-     <a href="Calendar.html" class="btn">Events and Deadlines</a>
+   <a href="ee325.html"  class="btn">EE325-Probaility</a>
+   <a herf="ee204.html"    class="btn">EE204-Analog</a>
+   <a href="ee224.html"  class="btn">EE224-Digital</a>
+   <a href="ec101.html"  class="btn">Ec101-Economics</a>
+   <a herf="404.html"    class="btn">EE229-Signal Processing</a>
+   
+   
+
+    <a href="Calendar.html" class="btn">Events and Deadlines</a>
 
     </main>
     <section class="upcoming">
   <h2>Upcoming Features</h2>
   <ul>
-    <li>Update to include btech info/material</li>
     <li>More courses</li>
     <li>Improved UI</li>
-    <li>Senior Feedback/advices section</li>
+    <li>Additional Info/material  </li>
+    <li>Senior reviews/advice section</li>
     <li>Anything else you suggest</li>
     
   </ul>
 </section>
-<section class="section-block">
+<footer>
   <h2>Note</h2>
   <p>
-  This is only a prototype-a personal mini project.A lot of work needs to be done.I will continue working on this.Hopefully the furture CRs and other enthu folks will also chip in.
+  This is only a prototype-a personal mini project.A lot of work needs to be done.I will continue working on this.Hopefully the furture CRs and other enthu folks  also chip in.
   </p>
-
-   
-</section>
+</footer>
 
 
 </body>
