--- a/ee325.html
+++ b/ee325.html
@@ -61,7 +61,7 @@
     <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20325&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac" class="btn">Course Drive</a>
 
     <a href="https://sharif.ir/~bahram/sp4cl/MainReferences/Papoulis-ProbabilityRandomVariablesAndStochasticProcesses.pdf" class="btn">Reference Book</a>
-    <a href="https://www.ee.iitb.ac.in/~bsraj/courses/ee325/" class=""btn>Previous offering-webiste</a>
+    <a href="https://www.ee.iitb.ac.in/~bsraj/courses/ee325/" class="btn">Previous offering-webiste</a>
     <a href="404.html" class="btn">Nimay Shah GitHub</a>
   </div>
 </section>
