--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <h2>Note</h2>
   <p>
   This is only a prototype-a personal mini project.A lot of work needs to be done.I will continue working on this.Hopefully the furture CRs and other enthu folks  also chip in.
+  Huge Shout out to Tezas Chhetri for massive UI upgrade
   </p>
 </footer>
 
