--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
   <main class="button-grid">
    <a href="ee325.html"  class="btn">EE325-Probaility</a>
-   <a herf="ee204.html"    class="btn">EE204-Analog</a>
+   <a href="ee204.html"  class="btn">EE325-Probaility</a>
    <a href="ee224.html"  class="btn">EE224-Digital</a>
    <a href="ec101.html"  class="btn">Ec101-Economics</a>
-   <a herf="404.html"    class="btn">EE229-Signal Processing</a>
+   <a href="404.html"  class="btn">EE229-Signals</a>
+
    
    
 
@@ -45,6 +46,7 @@
   <h2>Note</h2>
   <p>
   This is only a prototype-a personal mini project.A lot of work needs to be done.I will continue working on this.Hopefully the furture CRs and other enthu folks  also chip in.
+  <br>
   Huge Shout out to Tezas Chhetri for massive UI upgrade
   </p>
 </footer>
