--- a/ee204.html
+++ b/ee204.html
@@ -8,6 +8,12 @@
 <body>
   <header class="site-header">
     <h1>EE204-Analog</h1>
+    <div class="theme-toggle-container">
+      <label class="switch" aria-label="Toggle dark mode">
+        <input type="checkbox" id="theme-toggle" />
+        <span class="slider round"></span>
+      </label>
+    </div>
   </header>
 
   <main class="content">
@@ -55,5 +61,6 @@
   <footer>
     <a href="index.html" class="btn back-btn">Back to Home</a>
   </footer>
+  <script src='assets/js/script.js'></script>
 </body>
 </html>
