--- a/ee204.html
+++ b/ee204.html
@@ -61,6 +61,6 @@
   <footer>
     <a href="index.html" class="btn back-btn">Back to Home</a>
   </footer>
-  <script src='assets/js/script.js'></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
