--- a/ee204.html
+++ b/ee204.html
@@ -61,6 +61,7 @@
   <footer>
     <a href="index.html" class="btn back-btn">Back to Home</a>
   </footer>
+  <button id="scrollToTop" title="Back to top">↑</button>
   <script src="assets/js/script.js"></script>
 </body>
 </html>
