--- a/ee204.html
+++ b/ee204.html
@@ -8,8 +8,13 @@
 <body>
   <header class="site-header">
     <h1>EE204-Analog</h1>
+    <div class="theme-toggle-container">
+      <label class="switch" aria-label="Toggle dark mode">
+        <input type="checkbox" id="theme-toggle" />
+        <span class="slider round"></span>
+      </label>
+    </div>
   </header>
-
   <main class="content">
    <section class="section-block">
   <h2>Grading</h2>
@@ -36,7 +41,15 @@
     <li>Mid-sem: 25%</li>
     <li>End-sem: 45%</li>
     </ul>
+     <h3>Grading: Btech</h3>
+     <li>
+      <ul>~15% for quizes</ul>
+      <ul>~10% for assignments</ul>
+      <ul>~25-30% midsem</ul>
+      <ul>~40-45% endsem</ul>
+     </li>
   </p>
+
   
 </section>
 <section class="section-block">
@@ -55,5 +68,7 @@
   <footer>
     <a href="index.html" class="btn back-btn">Back to Home</a>
   </footer>
+  <button id="scrollToTop" title="Back to top">↑</button>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
