--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
    <a href="ee325.html"  class="btn">EE325-Probaility</a>
    <a href="ee204.html"  class="btn">EE204-Analog</a>
    <a href="ee224.html"  class="btn">EE224-Digital</a>
+   <a href="ee214.htm"   class="btn">EE214-Digitl Lab</a>
    <a href="ec101.html"  class="btn">Ec101-Economics</a>
    <a href="404.html"  class="btn">EE229-Signals</a>
 
