--- a/ee229.html
+++ b/ee229.html
@@ -2,4 +2,5 @@
 
 Dear Students,
 
-Hope you have attempted the HW 1. I posted the solutions today.  Please note that working out the problems each week is a good way to understand and keep up with the covered course concepts.  As announced, one of our TAs will be available for any help you need with the problems on Wednesday at 5 pm at the table just outside my office (EE 232A).    
+Hope you have attempted the HW 1. I posted the solutions today.  Please note that working out the problems each week is a good way to understand and keep up with the covered course concepts.  As announced, one of our TAs will be available for any help you need with the problems on Wednesday at 5 pm at the table just outside my office (EE 232A). 
+    <a href="https://drive.google.com/drive/folders/1kS5PK3pqG-HmRQyx0BBcy49IcXwqaZi4" class="btn">Handwritten Notes</a>
