--- a/ee325.html
+++ b/ee325.html
@@ -62,7 +62,7 @@
 
     <a href="https://sharif.ir/~bahram/sp4cl/MainReferences/Papoulis-ProbabilityRandomVariablesAndStochasticProcesses.pdf" class="btn">Reference Book</a>
     <a href="https://www.ee.iitb.ac.in/~bsraj/courses/ee325/" class="btn">Previous offering-webiste</a>
-    <a href="404.html" class="btn">Nimay Shah GitHub</a>
+    <a href="https://drive.google.com/drive/folders/1jSxm1-utCFsLV0Amtd4mdYki_g_v63bS" class="btn">Handwritten Notes</a>
   </div>
 </section>
 
