btech grading updated

--- a/ee224.html
+++ b/ee224.html
@@ -41,6 +41,13 @@
       <li>Midsem 40%</li>
       <li>Endsem 60%</li>
     </ul>
+    <h4>Grading: Btech</h4>
+    <ul>
+      <li>~15% for quizes</li>
+      <li>~10% for assignments</li>
+      <li>~25-30% midsem</li>
+      <li>~40-45% endsem</li>
+    </ul>
   </p>
   <p>
     <h3>Course Content</h3>
