--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
     </div>
 
   </header>
+  <section class="button-grid">
+    <h3>Additional</h3>
+    <a href="Calendar.html" class="btn">Events and Deadlines</a>
+    <a href="404.html" class="btn">About us</a>
+
+  </section>
 
   <main class="button-grid">
+    <h3>Courses</h3>
    <a href="ee325.html"  class="btn">EE325-Probaility</a>
    <a href="ee204.html"  class="btn">EE204-Analog</a>
    <a href="ee224.html"  class="btn">EE224-Digital</a>
@@ -29,7 +36,6 @@
    
    
 
-    <a href="Calendar.html" class="btn">Events and Deadlines</a>
 
     </main>
     <section class="upcoming">
