--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
     </div>
 
   </header>
+  <section class="section-block">
+        <h3>Additional</h3>
   <section class="button-grid">
-    <h3>Additional</h3>
     <a href="Calendar.html" class="btn">Events and Deadlines</a>
     <a href="404.html" class="btn">About us</a>
 
   </section>
+  </section>
 
-  <main class="button-grid">
-    <h3>Courses</h3>
+  <section class="button-grid">
+    <h3>Resources</h3>
+
    <a href="ee325.html"  class="btn">EE325-Probaility</a>
    <a href="ee204.html"  class="btn">EE204-Analog</a>
    <a href="ee224.html"  class="btn">EE224-Digital</a>
@@ -37,7 +40,8 @@
    
 
 
-    </main>
+  </section>
+
     <section class="upcoming">
   <h2>Upcoming Features</h2>
   <ul>
