--- a/index.html
+++ b/index.html
@@ -17,18 +17,10 @@
     </div>
 
   </header>
-  <section class="section-block">
-        <h3>Additional</h3>
+  
+<section class="section-block">
+      <h2><u>Resources</u></h2>
   <section class="button-grid">
-    <a href="Calendar.html" class="btn">Events and Deadlines</a>
-    <a href="404.html" class="btn">About us</a>
-
-  </section>
-  </section>
-
-  <section class="button-grid">
-    <h3>Resources</h3>
-
    <a href="ee325.html"  class="btn">EE325-Probaility</a>
    <a href="ee204.html"  class="btn">EE204-Analog</a>
    <a href="ee224.html"  class="btn">EE224-Digital</a>
@@ -36,10 +28,16 @@
    <a href="ec101.html"  class="btn">Ec101-Economics</a>
    <a href="404.html"  class="btn">EE229-Signals</a>
 
-   
-   
+  </section>
+  </section>
+  
+  <section class="section-block">
+        <h2><u>Additional</u></h2>
+  <section class="button-grid">
+    <a href="Calendar.html" class="btn">Events and Deadlines</a>
+    <a href="404.html" class="btn">About us</a>
 
-
+  </section>
   </section>
 
     <section class="upcoming">
