--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   </section>
   </section>
-  
+  <hr style="border: 0; border-top: 1px solid #ccc; margin: 2em 0;">
   <section class="section-block">
         <h2><u>Additional</u></h2>
   <section class="button-grid">
