--- a/Calendar.html
+++ b/Calendar.html
@@ -17,10 +17,13 @@
   </header>
 
   <main class="content">
-    <p>Here is a link to a Calendar that contains all upcoimg deadlines and also important sessions/events .
+    <div style="text-align: center;">
+      <p>Here is a link to a Calendar that contains all upcoming deadlines and also important sessions/events.
       <br>
-      (hopefully the upcoming Cr's :whoever they may be maintain this)</p>
-    <a href="https://calendar.google.com/calendar/u/0?cid=NzRjNDUzMGZmYWUwNDVjZjNkZmNlNjdmNWFiMDUzMzkyYTA4YWZjOWY1Yzk0OGY3YzYzZDQ4YTBkZTQ0MjgxOUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t" class="btn">Calendar</a>
+      (hopefully the upcoming Cr's :whoever they may be maintain this)
+      </p>
+      <a href="https://calendar.google.com/calendar/u/0?cid=NzRjNDUzMGZmYWUwNDVjZjNkZmNlNjdmNWFiMDUzMzkyYTA4YWZjOWY1Yzk0OGY3YzYzZDQ4YTBkZTQ0MjgxOUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t" class="btn">Calendar</a>
+    </div>
     <!-- Add more paragraphs, images, or other elements as needed -->
   </main>
 
