--- a/Calendar.html
+++ b/Calendar.html
@@ -22,8 +22,7 @@
       <br>
       (hopefully the upcoming Cr's :whoever they may be maintain this)
       </p>
-      <br>
-      <br>
+      <div style="margin: 16px 0;"></div>
       <a href="https://calendar.google.com/calendar/u/0?cid=NzRjNDUzMGZmYWUwNDVjZjNkZmNlNjdmNWFiMDUzMzkyYTA4YWZjOWY1Yzk0OGY3YzYzZDQ4YTBkZTQ0MjgxOUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t" class="btn">Calendar</a>
     </div>
     <!-- Add more paragraphs, images, or other elements as needed -->
