--- a/about.html
+++ b/about.html
@@ -6,18 +6,45 @@
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
+<body>
   <header class="site-header">
     <h1>Creators and Contributors</h1>
+    <div class="theme-toggle-container">
+      <label class="switch" aria-label="Toggle dark mode">
+        <input type="checkbox" id="theme-toggle" />
+        <span class="slider round"></span>
+      </label>
+    </div>
   </header>
 
-  <main class="content">
-    <p>Here is some text content specific to this page.</p>
-    <img src="assets/images/sample1.png" alt="Sample Image" class="responsive-image" />
-    <!-- Add more paragraphs, images, or other elements as needed -->
-  </main>
+
+  <section class="section-block">
+  <h2>Credits</h2>
+
+  <div class="credit-entry">
+    <img src="assets/images/aryan.jpg" alt="Aryan Metha">
+    <div class="credit-text">
+      <h3>Aryan Metha</h3>
+      <p>Created the frontend design,curated the resources</p>
+    </div>
+  </div>
+  <hr />
+
+  <div class="credit-entry">
+    <img src="assets/images/person2.jpg" alt="Tezas">
+    <div class="credit-text">
+      <h3>Tezas Chhetri</h3>
+      <p>Added several elements to improve the UI/design</p>
+    </div>
+  </div>
+  <hr />
+
 
   <footer>
     <a href="index.html" class="btn back-btn">Back to Home</a>
   </footer>
 </body>
+<link rel="stylesheet" href="assets/css/style.css" />
+<script src="assets/js/script.js"></script>
+
 </html>
