--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2><u>Additional</u></h2>
   <section class="button-grid">
     <a href="Calendar.html" class="btn">Events and Deadlines</a>
-    <a href="404.html" class="btn">About us</a>
+    <a href="about.html" class="btn">About us</a>
 
   </section>
   </section>
