--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   <hr />
 
   <div class="credit-entry">
-    <img src="assets/images/person2.jpg" alt="Tezas">
+    <img src="assets/images/unkown.jpg" alt="Tezas">
     <div class="credit-text">
       <h3>Tezas Chhetri</h3>
       <p>Added several elements to improve the UI/design</p>
