--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <a href="ee224.html"  class="btn">EE224-Digital</a>
    <a href="ee214.htm"   class="btn">EE214-Digitl Lab</a>
    <a href="ec101.html"  class="btn">Ec101-Economics</a>
-   <a href="404.html"  class="btn">EE229-Signals</a>
+   <a href="ee229.html"  class="btn">EE229-Signals</a>
 
   </section>
   </section>
@@ -55,7 +55,7 @@
 <footer>
   <h2>Note</h2>
   <p>
-  This is only a prototype-a personal mini project.A lot of work needs to be done.I will continue working on this.Hopefully the furture CRs and other enthu folks  also chip in.
+  This is only a prototype-a personal mini project.A lot of work needs to be done.Hopefully other enthu folks  also chip in.
   <br>
   Huge Shout out to Tezas Chhetri for massive UI upgrade
   </p>
