--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <a href="ee214.htm"   class="btn">EE214-Digitl Lab</a>
    <a href="ec101.html"  class="btn">Ec101-Economics</a>
    <a href="ee229.html"  class="btn">EE229-Signals</a>
-
+   <a href="ee240.html"  class="btn">EE240-Power Lab</a>
   </section>
   </section>
   <hr style="border: 0; border-top: 1px solid #ccc; margin: 2em 0;">
