--- a/ee240.html
+++ b/ee240.html
@@ -73,7 +73,7 @@
   <div class="button-grid">
     
     <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20240&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac" class="btn">Course Drive</a>
-    <a href="https://drive.google.com/drive/folders/1ZcQO5csKsNBOoonqV9Wttrm4JYZa0pCs">LT Spice</a>
+    <a href="https://drive.google.com/drive/folders/1ZcQO5csKsNBOoonqV9Wttrm4JYZa0pCs" class="btn">LT Spice</a>
   </div>
 </section>
 
