--- a/ee325.html
+++ b/ee325.html
@@ -60,9 +60,10 @@
   <div class="button-grid">
     <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20325&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac" class="btn">Course Drive</a>
 
-    <a href="https://sharif.ir/~bahram/sp4cl/MainReferences/Papoulis-ProbabilityRandomVariablesAndStochasticProcesses.pdf" class="btn">Reference Book</a>
+    <a href="https://drive.google.com/drive/folders/1MIy7KTjkYD3ejfqjZCiv2VaLhf9a2A8J" class="btn">Papoulis & Pillai</a>
     <a href="https://www.ee.iitb.ac.in/~bsraj/courses/ee325/" class="btn">Previous offering-webiste</a>
     <a href="https://drive.google.com/drive/folders/1jSxm1-utCFsLV0Amtd4mdYki_g_v63bS" class="btn">Handwritten Notes</a>
+    <a href="https://drive.google.com/drive/folders/1MIiwAswBUGpKZuvzYyRsiN4Krc8-zkMg" class="btn">Other books</a>
   </div>
 </section>
 
