--- a/ee204.html
+++ b/ee204.html
@@ -57,7 +57,7 @@
   <div class="button-grid">
     <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20204&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac" class="btn">Course Drive</a>
     <a href="https://kolegite.com/EE_library/books_and_lectures/%D0%95%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D0%BD%D0%B8%D0%BA%D0%B0/_The%20Art%20of%20Electronics%203rd%20ed%20%5B2015%5D.pdf" class="btn">Reference Book</a>
-    <a href="https://www.ee.iitb.ac.in/sandip/teaching.html" class="btn">DD Notes</a>
+    <a href="https://www.ee.iitb.ac.in/sandip/teaching.html" class="btn">DD class ppt</a>
     <a href="https://www.ee.iitb.ac.in/~sequel/course_material.html" class="btn">Btech website</a>
     <a href="https://github.com/nimayshah123/EE-204-Analog-Course-Material" class="btn">Nimay Shah GitHub</a>
   </div>
