--- a/ee224.html
+++ b/ee224.html
@@ -61,7 +61,7 @@
 <section class="section-block">
   <h2>Resources</h2>
   <div class="button-grid">
-    <a href="404.html" class="btn">Course Drive</a>
+    <a href="https://drive.google.com/drive/folders/12o3YNWx0-PZUksO5AehQcmdRMfPMay_g?usp=sharing" class="btn">Pyqs+Notes</a>
     <a href="https://github.com/nimayshah123/EE224_Project" class="btn">Sample project</a>
     <a href="https://daskalakispiros.com/files/Ebooks/Fundamentals_of_Digital_Logic_with_Verilog_Design_(3rd_edition)__ebook3000.pdf" class="btn">Reference Book</a>
   </div>
