--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Resource Hub</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="icon" href="https://t3.ftcdn.net/jpg/02/02/86/78/360_F_202867825_w3pjRaxzUbO5WT3mHvjC6zGTM82k96Uw.jpg" />
 </head>
 <body>
   <header class="site-header">
