--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Resource Hub</title>
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="icon" href="https://t3.ftcdn.net/jpg/02/02/86/78/360_F_202867825_w3pjRaxzUbO5WT3mHvjC6zGTM82k96Uw.jpg" />
+  <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRdJO3_4ClcISCl775oYLcRQoO5uYKb2JK5zWjQhOSw5WrmVO-SqmK96oi8-YVhavH5KH0&usqp=CAU" />
 </head>
 <body>
   <header class="site-header">
