--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <section class="section-block">
       <h2><u>Resources</u></h2>
   <section class="button-grid">
-   <a href="ee325.html"  class="btn">EE325-Probaility</a>
+   <a href="ee325.html"  class="btn">EE325-Probability</a>
    <a href="ee204.html"  class="btn">EE204-Analog</a>
    <a href="ee224.html"  class="btn">EE224-Digital</a>
-   <a href="ee214.htm"   class="btn">EE214-Digitl Lab</a>
+   <a href="ee214.htm"   class="btn">EE214-Digital Lab</a>
    <a href="ec101.html"  class="btn">Ec101-Economics</a>
    <a href="ee229.html"  class="btn">EE229-Signals</a>
    <a href="ee240.html"  class="btn">EE240-Power Lab</a>
