--- a/about.html
+++ b/about.html
@@ -31,10 +31,10 @@
   <hr />
 
   <div class="credit-entry">
-    <img src="assets/images/unkown.jpg" alt="Tezas">
+    <img src="assets/images/tezas.jpg" alt="Tezas">
     <div class="credit-text">
       <h3>Tezas Chhetri</h3>
-      <p>Added several elements to improve the UI/design</p>
+      <p>Made several brilliant UI upgrades </p>
     </div>
   </div>
   <hr />
