--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Resource Hub</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+
   <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRdJO3_4ClcISCl775oYLcRQoO5uYKb2JK5zWjQhOSw5WrmVO-SqmK96oi8-YVhavH5KH0&usqp=CAU" />
 </head>
 <body>
@@ -18,19 +19,40 @@
     </div>
 
   </header>
-  
-<section class="section-block">
-      <h2><u>Resources</u></h2>
-  <section class="button-grid">
-   <a href="ee325.html"  class="btn">EE325-Probability</a>
-   <a href="ee204.html"  class="btn">EE204-Analog</a>
-   <a href="ee224.html"  class="btn">EE224-Digital</a>
-   <a href="ee214.htm"   class="btn">EE214-Digital Lab</a>
-   <a href="ec101.html"  class="btn">Ec101-Economics</a>
-   <a href="ee229.html"  class="btn">EE229-Signals</a>
-   <a href="ee240.html"  class="btn">EE240-Power Lab</a>
-  </section>
-  </section>
+
+
+
+  <!-- Middle region: gets its OWN scrollbar -->
+  <main id="scroll-region">
+    <section class="section-block">
+      <h2><u>Core Resources</u></h2>
+      <section class="button-grid">
+        <a href="ee325.html" class="btn">EE325-Probability</a>
+        <a href="ee204.html" class="btn">EE204-Analog</a>
+        <a href="ee224.html" class="btn">EE224-Digital</a>
+        <a href="ee214.htm" class="btn">EE214-Digital Lab</a>
+        <a href="ec101.html" class="btn">Ec101-Economics</a>
+        <a href="ee229.html" class="btn">EE229-Signals</a>
+        <a href="ee240.html" class="btn">EE240-Power Lab</a>
+      </section>
+    </section>
+
+    <section class="section-block">
+      <h2><u>Other Resources</u></h2>
+      <section class="button-grid">
+        <a href="404.html" class="btn">DS203</a>
+        <a href="404.html" class="btn">SC639</a>
+        <a href="404.html" class="btn">DS203</a>
+        <a href="404.html" class="btn">SC639</a>
+        <a href="404.html" class="btn">DS203</a>
+        <a href="404.html" class="btn">SC639</a>
+      </section>
+    </section>
+  </main>
+
+
+
+     
   <hr style="border: 0; border-top: 1px solid #ccc; margin: 2em 0;">
   <section class="section-block">
         <h2><u>Additional</u></h2>
