--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
     <section class="upcoming">
   <h2>Upcoming Features</h2>
   <ul>
-    <li>More courses</li>
+
     <li>Improved UI</li>
-    <li>Additional Info/material  </li>
     <li>Senior reviews/advice section</li>
     <li>Anything else you suggest</li>
     
@@ -80,7 +79,8 @@
   <p>
   This is only a prototype-a personal mini project.A lot of work needs to be done.Hopefully other enthu folks  also chip in.
   <br>
-  Huge Shout out to Tezas Chhetri for massive UI upgrade
+ Interested folks pls contact me (7058144927)
+
   </p>
 </footer>
 
