--- a/ee214.htm
+++ b/ee214.htm
@@ -109,6 +109,8 @@
     <a href="https://drive.google.com/file/d/18Wa5Ieh2sRBHGU0nu-fGIwM90TwXnO4y/view?usp=sharing" class="btn">VHDL Notes</a>
     <a href="https://ee214.github.io/docs/resources/files" class="btn">Extra Resources</a>
     <a href="https://github.com/nimayshah123/EE224_Project" class="btn">Sample Project:16bit computer</a>
+    <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20214&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac" class="btn">Course Drive</a>
+    
   </div>
 </section>
 
