--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Middle region: gets its OWN scrollbar -->
   <main id="scroll-region">
     <section class="section-block">
-      <h2><u>Core Resources</u></h2>
+      <h2>Core Resources</h2>
       <section class="button-grid">
         <a href="ee325.html" class="btn">EE325-Probability</a>
         <a href="ee204.html" class="btn">EE204-Analog</a>
@@ -38,7 +38,7 @@
     </section>
 
     <section class="section-block">
-      <h2><u>Other Resources</u></h2>
+      <h2>Other Resources</h2>
       <section class="button-grid">
         <a href="404.html" class="btn">DS203</a>
         <a href="404.html" class="btn">SC639</a>
@@ -54,8 +54,8 @@
 
      
   <hr style="border: 0; border-top: 1px solid #ccc; margin: 2em 0;">
-  <section class="section-block">
-        <h2><u>Additional</u></h2>
+  <section class="section-block additional-section-block">
+        <h2>Additional</h2>
   <section class="button-grid">
     <a href="Calendar.html" class="btn">Events and Deadlines</a>
     <a href="about.html" class="btn">About us</a>
