--- a/ee229.html
+++ b/ee229.html
@@ -68,7 +68,7 @@
 <section class="section-block">
   <h2>Resources</h2>
   <div class="button-grid">
-    <a href="https://drive.google.com/drive/u/0/my-drive" class="btn">Reference Book</a>
+    <a href="https://drive.google.com/file/d/1XL9m5anoUpXnnztu_xyOR9Tj0f0rkSkA/view?usp=sharing" class="btn">Reference Book</a>
     <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20229&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac" class="btn">Course Drive</a>
     <a href="https://drive.google.com/drive/folders/1kS5PK3pqG-HmRQyx0BBcy49IcXwqaZi4" class="btn">Handwritten Notes</a>
     <a href="https://github.com/nimayshah123/EE229-Signal-Processing" class="btn">Nimay Shah Github</a>
