--- a/ec101.html
+++ b/ec101.html
@@ -50,8 +50,8 @@
     <li>If attendence &lt;60% DX </li>
     </ul>
   <ol>
-    <li>Quiz syllabus : SS chapter 1 , GM chapter 10,11,12,13</li>
-    <li>Endsem Syllabus:quiz+Gm chapters 15,16,17,20,21</li>
+    <li>Quiz syllabus : SS chapter 1 , GM chapter(new edition) 23,24,25,26</li>
+    <li>Endsem Syllabus:quiz+Gm chapters(new edition) 28,29,30,33,34</li>
   </ol>
   
   </p>
