--- a/ee214.htm
+++ b/ee214.htm
@@ -78,26 +78,27 @@
     <td>ALU 8 bit</td>
     <td>ALU 8 bit</td>
   </tr>
-  <tr>
+   <tr>
     <td>Lab-6</td>
-    <td>Finding gcd using repetitive subtraction</td>
-    <td>Finding gcd using repetitive subtraction</td>
+    <td>Down Counter</td>
+    <td>Down Counter</td>
   </tr>
   <tr>
     <td>Lab-7</td>
-    <td>New string</td>
-    <td>New string</td>
+    <td>Finding gcd using repetitive subtraction</td>
+    <td>Finding gcd using repetitive subtraction</td>
   </tr>
   <tr>
     <td>Lab-8</td>
-    <td>Clock divider and Ring counter</td>
-    <td>Clock divider and Ring counter</td>
+    <td>New string</td>
+    <td>New string</td>
   </tr>
   <tr>
     <td>Lab-9</td>
-    <td>Pascal's triangle row generator</td>
-    <td>Pascal's triangle row generator</td>
+    <td>Clock divider and Ring counter<br>Pascal's triangle row generator</td>
+    <td>Clock divider and Ring counter<br>Pascal's triangle row generator</td>
   </tr>
+ 
 </table>
 
   
