removed reduntant scroll

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <!-- Middle region: gets its OWN scrollbar -->
-  <main id="scroll-region">
+  <main class="content">
     <section class="section-block">
       <h2>Core Resources</h2>
       <section class="button-grid">
@@ -53,16 +53,7 @@
   </section>
   </section>
 
-    <section class="upcoming">
-  <h2>Upcoming Features</h2>
-  <ul>
-
-    <li>Improved UI</li>
-    <li>Senior reviews/advice section</li>
-    <li>Anything else you suggest</li>
-    
-  </ul>
-</section>
+   
   <hr style="border: 0; margin: 0em 0;">
 <footer>
   <h2>Note</h2>
