--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- ================= HEADER ================= -->
   <header class="site-header">
-    <h1>Welcome to the Course Home</h1>
+    <h1>Welcome to the Course Home </h1>
     <p>
       Tired of frantically switching between Resobin, Course Drive, ASC,
       and a hundred other tabs one day before an exam?
@@ -33,9 +33,9 @@
 
     <!-- ===== Core Resources ===== -->
     <section class="section-block core-section">
-      <h2>Core Resources</h2>
+      <h2>Resources</h2>
 
-      <p class="section-subtitle">
+      <p class="section-subtitle" style="text-align: center;">
         Select a semester to view the corresponding course resources.
       </p>
 
