--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
       <!-- Semester 4 -->
       <section class="button-grid semester-grid hidden" data-sem="sem4">
         <p class="empty-state">
-          Resources for Semester 4 will be added soon.
+          <a href="ee302" class="btn">EE302-Controls</a>
+          <a href="ee207.html" class="btn">EE207-Devices</a>
+          <a href="ee337.html" class="btn">EE337-Micro Lab</a>
+          <a href="ee309.htm" class="btn">EE309-Microprocessors</a>
         </p>
       </section>
 
@@ -67,6 +70,8 @@
       <section class="button-grid semester-grid hidden" data-sem="common">
         <a href="ec101.html" class="btn">EC101 –Economics</a>
         <a href="404.html" class="btn">DS203 – Programming for Data Science</a>
+        <a href="DE250.html" class="btn">DE250-Design</a>
+  
       </section>
 
     </section>
