--- a/ee337.html
+++ b/ee337.html
@@ -45,9 +45,9 @@ Will be held on 11th April (Saturday).</li>
 <section class="section-block">
   <h2>Resources</h2>
   <div class="button-grid">
-    <a href="https://drive.google.com/file/d/1f7AVS4AqNzJ-rOX6SbJiV5c2Yne4OcCD/view">Instruction Set</a>
-    <a href="https://github.com/nimayshah123/EE337-Microprocessors-Laboratory/tree/main">Nimay Shah github</a>
-    <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20337&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac">Course Drive</a>
+    <a href="https://drive.google.com/file/d/1f7AVS4AqNzJ-rOX6SbJiV5c2Yne4OcCD/view" class="btn">Instruction Set</a>
+    <a href="https://github.com/nimayshah123/EE337-Microprocessors-Laboratory/tree/main" class="btn">Nimay Shah github</a>
+    <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20337&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac " class="btn">Course Drive</a>
     <a href="https://docs.google.com/presentation/d/1WGuC_1nDYHNdYZaPo-vFpk_CJ5UJu0wo/edit?usp=sharing&ouid=104224932638424945503&rtpof=true&sd=true" class="btn">Additonal Info</a>
 
   </main>
