--- a/DE250.html
+++ b/DE250.html
@@ -201,7 +201,7 @@
 
     <footer>
       
-    <a href="index.html" class="btn back-btn">Back to Home</a>
+    <a href="index.html" class="btn">Back to Home</a>
 
     </footer>
   </div>
