--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
       <!-- Semester Selector -->
       <div class="semester-tabs">
-        <button class="semester-tab active" data-sem="sem3">Sem 3 </button>
-        <button class="semester-tab" data-sem="sem4">Sem 4(Current)</button>
+        <button class="semester-tab " data-sem="sem3">Sem 3 </button>
+        <button class="semester-tab active" data-sem="sem4">Sem 4(Current)</button>
         <button class="semester-tab" data-sem="common">Common</button>
       </div>
 
