Fix links to EE302 and EE309 in index.html

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <!-- Semester 4 -->
       <section class="button-grid semester-grid " data-sem="sem4">
         <p class="empty-state">
-          <a href="ee302" class="btn">EE302-Controls</a>
+          <a href="ee302.html" class="btn">EE302-Controls</a>
           <a href="ee207.html" class="btn">EE207-Devices</a>
           <a href="ee337.html" class="btn">EE337-Micro Lab</a>
-          <a href="ee309.htm" class="btn">EE309-Microprocessors</a>
+          <a href="ee309.html" class="btn">EE309-Microprocessors</a>
         </p>
       </section>
 
