Update reference book links in ee302.html

--- a/ee302.html
+++ b/ee302.html
@@ -56,8 +56,8 @@
     <a href="https://drive.google.com/drive/folders/1xA-423xpUfwjLmtB2VgICLHTWkxzOqJm?usp=sharing" class="btn">Handwritten Notes(Harish Pillai)</a>
     <a href="https://www.ee.iitb.ac.in/~debasattam/ee302.html" class="btn">Course Page(DD)</a>
     <a href="https://iitbacin.sharepoint.com/sites/EE-coursedrive/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FEE%2Dcoursedrive%2FShared%20Documents%2FEE%20302&viewid=6b6fd251%2Dbdf4%2D4eb0%2D97be%2D622c63c1cfac" class="btn">Course Drive</a>
-    <a href="https://www.daslhub.org/unlv/courses/00coursesUsb/labviewCourseDevelopment/labview-0X-LeadLag/Franklin%20PE%206th%20-%20textbook%20but%20perhaps%20too%20much%20-%20no%20simple%20Lag%20control%20example.pdf" class="btn">Reference Book-Powell</a>
-    <a href="https://drive.google.com/file/d/16O6I-5rB_pjx7lw3RZ0ay0aqgMiXExqV/view?usp=sharing" class="btn">Reference Book-Nise</a>
+    <a href="https://drive.google.com/file/d/1AsAIjmkpDj6VWsDyxMybkn95vUSvF_0y/view?usp=sharing" class="btn">Reference Book-Nise</a>
+    <a href="https://drive.google.com/file/d/16O6I-5rB_pjx7lw3RZ0ay0aqgMiXExqV/view?usp=sharing" class="btn">Reference Book-Powell</a>
 
   </main>
 
